remoção de get incompleto no user
